force-app/main/default/objects/Third_Party_Settings__mdt/Third_Party_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Third Party Settings</label>
    <pluralLabel>Third Parties Settings</pluralLabel>
</CustomObject>