force-app/main/default/objects/Third_Party_Settings__mdt/fields/Custom_Settings__c.field-meta.xml
<CustomField>
    <fullName>Custom_Settings__c</fullName>
    <label>Custom Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>