force-app/main/default/objects/Third_Party_Settings__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <inlineHelpText>Secret Id</inlineHelpText>
    <label>Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>