force-app/main/default/objects/Third_Party_Settings__mdt/fields/Paths__c.field-meta.xml
<CustomField>
    <fullName>Paths__c</fullName>
    <label>Paths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>